--- a/sys/rump/librump/rumpkern/Makefile.rumpkern
+++ b/sys/rump/librump/rumpkern/Makefile.rumpkern
@@ -1,4 +1,4 @@
-#	$NetBSD: Makefile.rumpkern,v 1.169.6.1 2017/10/21 19:43:54 snj Exp $
+#	$NetBSD: Makefile.rumpkern,v 1.169.6.2 2019/09/03 12:08:22 martin Exp $
 #
 
 .include "${RUMPTOP}/Makefile.rump"
@@ -16,8 +16,7 @@ MAN=		rump.3 rump_lwproc.3
 	${RUMPTOP}/../uvm					\
 	${RUMPTOP}/../conf					\
 	${RUMPTOP}/../dev					\
-	${RUMPTOP}/../crypto/nist_ctr_drbg			\
-	${RUMPTOP}/../crypto/rijndael				\
+	${RUMPTOP}/../crypto/nist_hash_drbg			\
 	${RUMPTOP}/../crypto/cprng_fast				\
 	${RUMPTOP}/../secmodel					\
 	${RUMPTOP}/../secmodel/suser				\
@@ -150,10 +149,7 @@ SRCS+=	clock_subr.c
 # sys/dev/crypto
 # Note: these are here only for cprng.  More crypto algos for drivers
 # are available from the rumpkern_crypto component
-SRCS+=	nist_ctr_drbg.c
-SRCS+=	rijndael-alg-fst.c
-SRCS+=	rijndael-api-fst.c
-SRCS+=	rijndael.c
+SRCS+=	nist_hash_drbg.c
 SRCS+=	cprng_fast.c
 
 # compat
